# ai-agents-workshop

./: .dockerignore  .env-old  .env.sample  .gitignore  Dockerfile  Gemfile  README.md  README.md.new  Zava_Exec_Overview.pptx  _config.yml  business.md  index.md  pyproject.toml  requirements.txt  skills-lock.json  uvicorn.err  uvicorn.out  ~$Zava_Exec_Overview.pptx
.github/workflows/: jekyll-gh-pages.yml
app/: __init__.py  cli.py  main.py  observability.py
app/agents/: __init__.py  base.py  hr.py  marketing.py  orchestrator.py  products.py
app/knowledge/: hr.md  marketing.md  products.md
docs/: 00_setup.md  01_hr_agent.md  02_products_agent.md  03_marketing_agent.md  04_orchestrator.md  05_observability_ai_foundry.md  architecture.md  index.md  index.md.new  module_1.md  module_2.md  module_3.md  module_4.md  module_5.md  module_6.md  module_7.md  setup.md
docs/00_setup/: 00_01_prerequisites.md  00_02_clone_and_bootstrap.md  00_03_verify_resources.md  00_04_verify_environment.md  00_setup.md
docs/01_chat_app_scaffold/: 01_01_run_app_locally.md  01_02_understand_agent_mode.md  01_chat_app_scaffold.md
docs/02_intent_agent/: 02_intent_agent.md
docs/02_marketing_mcp_server/: 02_03_deploy_container_app.md  02_marketing_mcp_server.md
docs/02_products_mcp_server/: 02_01_seed_cosmos.md  02_02_build_mcp_server.md  02_03_run_locally.md  02_04_deploy_container_app.md  02_products_mcp_server.md
docs/03_hr_foundry_iq_agent/: 03_01_create_knowledge_base.md
docs/03_mcp_tools/: 03_mcp_tools.md
docs/03_products_foundry_agent/: 03_01_register_mcp_connection.md  03_02_create_products_agent.md  03_03_wire_into_chat_app.md  03_products_foundry_agent.md
docs/04_marketing_mcp_server/: 04_01_seed_cosmos.md  04_02_build_mcp_server.md  04_03_deploy_container_app.md  04_marketing_mcp_server.md
docs/04_products_foundry_agent/: 04_01_register_mcp_connection.md  04_03_test_agent.md
docs/04_sales_agent/: 04_sales_agent.md
docs/05_inventory_agent/: 05_inventory_agent.md
docs/05_marketing_foundry_agent/: 05_01_register_mcp_and_bing.md  05_01_seed_marketing_kb.md  05_02_build_hosted_marketing_agent.md  05_02_create_marketing_agent.md  05_03_deploy_and_wire.md  05_03_test_agent.md  05_03_wire_into_chat_app.md  05_marketing_foundry_agent.md
docs/06_hr_foundry_iq_agent/: 06_01_create_knowledge_base.md  06_02_create_hr_agent.md  06_03_wire_into_chat_app.md  06_hr_foundry_iq_agent.md
docs/06_marketing_agent/: 06_marketing_agent.md
docs/06_orchestrator_agent_framework/: 06_02_build_orchestrator.md  06_03_run_orchestrator.md  06_orchestrator_agent_framework.md
docs/06_store_ops_foundry_iq_agent/: 06_01_create_knowledge_base.md  06_02_create_store_ops_agent.md  06_03_wire_into_chat_app.md  06_store_ops_foundry_iq_agent.md
docs/07_orchestrator/: 07_orchestrator.md
docs/07_orchestrator_agent_framework/: 07_01_magentic_overview.md  07_02_build_orchestrator.md  07_03_wire_orchestrator_into_chat.md  07_orchestrator_agent_framework.md
docs/07_response_generator_agent/: 07_01_create_response_agent.md
docs/08_action_agent/: 08_action_agent.md
docs/08_chat_app_and_observability/: 08_02_observability.md
docs/08_response_generator/: 08_01_create_response_agent.md  08_02_wire_into_orchestrator.md  08_response_generator.md
docs/08_response_generator_and_observability/: 08_01_create_response_agent.md  08_02_wire_into_orchestrator.md  08_03_observability.md  08_response_generator_and_observability.md
docs/09_cleanup/: 09_cleanup.md
docs/09_evaluations/: 09_01_ground_truth_dataset.md  09_02_quality_eval.md  09_03_scheduled_and_continuous.md  09_evaluations.md
docs/09_response_generator/: 09_response_generator.md
docs/10_deploy_chat_app/: 10_deploy_chat_app.md
docs/10_guardrails_red_teaming/: 10_01_guardrails_middleware.md  10_02_custom_policies.md  10_03_red_team_scan.md  10_guardrails_red_teaming.md
docs/11_hosted_agents/: 11_hosted_agents.md
docs/11_observability/: 11_01_chat_app_observability.md  11_02_hosted_agent_traces.md  11_03_kql_queries.md  11_observability.md
docs/12_cleanup/: 12_cleanup.md
docs/12_evaluations/: 12_evaluations.md
docs/13_deploy_chat_app/: 13_01_basic_auth_and_model_picker.md  13_02_build_image.md  13_03_create_container_app.md  13_04_grant_roles.md  13_05_verify_and_update.md  13_deploy_chat_app.md
docs/13_observability/: 13_observability.md
docs/14_guardrails_red_teaming/: 14_guardrails_red_teaming.md
docs/15_governance/: 15_governance.md
docs/16_cleanup/: 16_cleanup.md
docs/images/: zava_demo_scenario_slide.html
scripts/: _mcp_deploy_common.ps1  add_reference_arch_slides.py  call_hosted.py  deploy-chat-app.ps1  deploy-inventory-hosted.ps1  deploy-inventory-mcp.ps1  deploy-marketing-mcp.ps1  deploy-sales-mcp.ps1  generate_zava_seed.py  make_exec_deck.py  register_inventory_hosted.py  seed-cosmos.ps1
solution/app/: main.py
solution/common/: settings.py
solution/evaluations/: continuous_eval.py  continuous_eval_alert.py  quality_eval.py  scheduled_eval.py
solution/foundry_agents/: create_marketing_agent.py  create_products_agent.py  create_response_agent.py  setup_marketing_knowledge_base.py  setup_store_ops_knowledge_base.py
solution/foundry_agents/marketing_hosted/: Dockerfile  agent.yaml  main.py  middleware.py  pyproject.toml
solution/orchestrator/: magentic_router.py
solution/red_team/: red_team_scan_local.py
src/app/: chat.html  cli.py  devui_launch.py  main.py  main.py.new
src/common/: basic_auth.py  cosmos.py  foundry_client.py  observability.py  settings.py  zava_reference.py
src/evaluations/: __init__.py  continuous_eval.py  continuous_eval_alert.py  quality_eval.py  sales_quality_eval.py  sales_red_team.py  sales_tool_definitions.py  scheduled_eval.py
src/foundry_agents/: _common.py  create_action_agent.py  create_hr_agent.py  create_intent_agent.py  (+10 more)
src/foundry_agents/marketing_hosted/: README.md  agent.yaml  main.py  middleware.py  pyproject.toml
tests/: test_agents.py  test_smoke.py
(+109 files in other folders)
