[project]
name = "zava-marketing-hosted-agent"
version = "0.1.0"
description = "Foundry-hosted Zava Marketing agent (Microsoft Agent Framework)"
requires-python = ">=3.12"
dependencies = [
  "agent-framework>=0.3.0",
  "agent-framework-foundry-hosting>=0.3.0",
  "azure-identity>=1.17.0",
  "httpx>=0.27.0",
  "mcp>=1.0.0",
  "python-dotenv>=1.0.0",
]
